--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 <h1>Example PDF Document Service<h1>
-<h2>Upload PDF Document:</h2>
-<form>
-	<input name="file" type="file" size="100">
-</form>
+<h2>List of Documents:</h2>
+
 </body>
 </html>
