Renamed pdfserv to docserv

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>PDF Document Service</title>
+	<title>Document Service</title>
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript">
 	
@@ -59,7 +59,7 @@
 </head>
 <body>
 
-<h1>Example PDF Document Service</h1>
+<h1>Example Document Service</h1>
 <h2>List of Documents:</h2>
 <ul id="document-list"></ul>
 
